<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseDeviceActivity">

    <Button
        android:id="@+id/hexo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/hexo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ritm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/ritm"
        app:layout_constraintEnd_toEndOf="@+id/hexo"
        app:layout_constraintStart_toStartOf="@+id/hexo"
        app:layout_constraintTop_toBottomOf="@+id/hexo" />

    <Button
        android:id="@+id/dex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/dex"
        app:layout_constraintEnd_toEndOf="@+id/ritm"
        app:layout_constraintStart_toStartOf="@+id/ritm"
        app:layout_constraintTop_toBottomOf="@+id/ritm" />

    <Button
        android:id="@+id/scales"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/scale"
        app:layout_constraintEnd_toEndOf="@+id/dex"
        app:layout_constraintStart_toStartOf="@+id/dex"
        app:layout_constraintTop_toBottomOf="@+id/dex" />

    <Button
        android:id="@+id/watch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/watch"
        app:layout_constraintEnd_toEndOf="@+id/scales"
        app:layout_constraintStart_toStartOf="@+id/scales"
        app:layout_constraintTop_toBottomOf="@+id/scales" />

    <Button
        android:id="@+id/multi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/teal_200"
        android:onClick="onClickGo2"
        android:text="@string/multi"
        app:layout_constraintEnd_toEndOf="@+id/watch"
        app:layout_constraintStart_toStartOf="@+id/watch"
        app:layout_constraintTop_toBottomOf="@+id/watch" />
</androidx.constraintlayout.widget.ConstraintLayout>