<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Activity2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2">

    <TextView
        android:id="@+id/devName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/dev"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/my_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/r_to_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/my_yellow"
        android:onClick="onClickGoStart"
        android:text="@string/r_to_s"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/param1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="150dp"
        android:text="@string/param1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/min_val1"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:hint="@string/gluc_min_val"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/param1"
        app:layout_constraintStart_toEndOf="@+id/param1"
        app:layout_constraintTop_toTopOf="@+id/param1"
        android:autofillHints="" />

    <EditText
        android:id="@+id/max_val1"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/gluc_max_val"
        android:inputType="numberDecimal"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="@+id/min_val1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/min_val1"
        app:layout_constraintTop_toTopOf="@+id/min_val1"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/freq1"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/gluc_frec"
        app:layout_constraintBottom_toBottomOf="@+id/max_val1"
        app:layout_constraintStart_toEndOf="@+id/max_val1"
        app:layout_constraintTop_toTopOf="@+id/max_val1"
        app:layout_constraintVertical_bias="1.0"
        android:autofillHints="" />


</androidx.constraintlayout.widget.ConstraintLayout>