<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BLEWorkActivity">

    <TextView
        android:id="@+id/cur_sett"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/teal_200"
        android:text="@string/cur_sett"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/sw_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:backgroundTint="@color/teal_700"
        android:buttonTint="@color/teal_700"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="onClickListener"
        android:text="@string/sw_button"
        app:layout_constraintEnd_toEndOf="@+id/cur_sett"
        app:layout_constraintStart_toStartOf="@+id/cur_sett"
        app:layout_constraintTop_toBottomOf="@+id/cur_sett"
        tools:ignore="UseSwitchCompatOrMaterialXml,UsingOnClickInXml" />

    <TextView
        android:id="@+id/phone_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="64dp"
        android:text="@string/phone_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/phone_addr"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/phone_addr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:text="@string/phone_addr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/teal_200"
        android:text="Share logs"
        android:onClick="onClickShare"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cur_sett"
        app:layout_constraintStart_toStartOf="@+id/cur_sett"
        app:layout_constraintTop_toBottomOf="@+id/sw_button" />

</androidx.constraintlayout.widget.ConstraintLayout>